--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 :root {
     --bg-color: #ffffff;
     --text-color: #333333;
@@ -118,19 +119,33 @@ hr {
     color: var(--text-color);
 }
 
+.title-container {
+    font-size: 1.5rem;
+    font-weight: bold;
+    width: 50%;
+    text-align: center;
+    text-wrap: wrap;
+    color: var(--text-color);
+
+}
+
 .title {
     font-size: 1.5rem;
     font-weight: bold;
-    text-wrap: wrap;
     width: 50%;
     text-align: center;
+    text-wrap: wrap;
     color: var(--text-color);
 }
 
 .title:hover {
-    color: var(--text-color);    
+    color: var(--text-color);
 }
 
+.options-container {
+    text-align: center;
+    vertical-align: middle;
+}
 
 .sidebar {
     position: fixed;
